--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: a7c957 #80B3FF
-  primary-rgb: "167,201,87" #"128,179,255"
-  secondary: 48597a #FD6E8A
-  secondary-dark: 001846 #A2122F
+  primary: e63946 #80B3FF
+  primary-rgb: "209,73,91" #"128,179,255"
+  secondary: 4c956c #FD6E8A
+  secondary-dark: f72585 #A2122F
 
 # Footer settings
 footer:
