--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 003049 #80B3FF
+  primary: ebf2fa  #80B3FF
   primary-rgb: "209,73,91"  # "128,179,255"
-  secondary: f1f7ed #FD6E8A
-  secondary-dark: 001846 #000000
+  secondary: 427aa1 #FD6E8A
+  secondary-dark: 92140c #000000
 
 
 # Footer settings
