--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: ebf2fa  #80B3FF
-  primary-rgb: "209,73,91"  # "128,179,255"
-  secondary: 427aa1 #FD6E8A
+  primary: fff8f0 #80B3FF
+  primary-rgb: "255, 248, 240" # "128,179,255"
+  secondary: 427aa1  #FD6E8A
   secondary-dark: 92140c #000000
 
 
