--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fff8f0 #80B3FF
-  primary-rgb: "255, 248, 240" # "128,179,255"
-  secondary: 427aa1  #FD6E8A
-  secondary-dark: 92140c #000000
+  primary: dbdbdb #80B3FF
+  primary-rgb: "219,219,219" # "128,179,255"
+  secondary: c10404  #FD6E8A
+  secondary-dark: 06080d  #000000
 
 
 # Footer settings
