--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: nycarid@gmail.com
 url: https://NycariDProfolio.github.io/Cyber_Attack
 description: "Portfolio of cybersecurity work samples for a junior-level cyber security professional."
 keywords: "cybersecurity, cyber, security, portfolio, tech"
-skills: "Cybersecurity - GRC Analysis - Windows Admin"
+skills: "GRC Analysis - Windows Admin"
 meta_author: Nycari Douglas
 
 # Google webmaster tools
